dark mode toggle fix

--- a/code/frontend/src/css/mobile/themes.css
+++ b/code/frontend/src/css/mobile/themes.css
@@ -40,7 +40,7 @@
     padding:0;
     height:100vh;
     width:100vw;
-    background-color:rgb(53, 53, 53);
+    background-color:rgb(23, 23, 23);
     color: white;
 }
 
